# Atlas-mcp-1

./: .env.k8s.example  .gitignore  ATLAS_ARCHITECTURE_FLOW.md  ATLAS_FIXES_SUMMARY.md  ATLAS_FULL_SYSTEM.md  ATLAS_MCP_INTEGRATION_PLAN.md  ATLAS_АВТОНОМНА_СИСТЕМА.md  AUTOMATION-GUIDE.md  AUTONOMOUS_CAPABILITIES.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_STATUS.json  DEPENDENCY_FIX_GUIDE.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT_COMPONENTS_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  Dockerfile.mcp-automation  Dockerfile.mcp-automator  Dockerfile.minimal  Dockerfile.test  FINAL_MCP_STATUS_REPORT.md  FINAL_SUCCESS_REPORT.txt  FIXES_SUMMARY.md  FLOWCHARTS.md  INSTALLATION_SUMMARY.md  INTEGRATION_SUMMARY.md  KUBERNETES-OLLAMA-FIX.md  KUBERNETES-SUMMARY.md  KUBERNETES_FULL_STACK_SUCCESS.md  LOGIC.md  LOGIC2.md  LOGIC_NEW.md  LOGIC_old.md  MACOS_AUTOMATION_STATUS.md  Makefile  NATIVE_MCP_DEPLOYMENT_PLAN.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_CONSOLIDATION_REPORT.md  (+97 more)
mcp-task-orchestrator/: .env.example  .gitignore  .markdownlint.json  .vale.ini  ARCHIVE_STRATEGY.md  CHANGELOG.md  CLAUDE-detailed.md  CLAUDE.md  CLAUDE.md.backup  CLI_PROMPT_MULTI_STAGE_VALIDATION.md  CLI_PROMPT_SECURITY_TEST_SUITE.md  CONTRIBUTING.md  DETAILED_CONTENT_AUDIT.md  DOCUMENTATION_INVENTORY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_STRATEGY.md  QUICK_START.md  README.md  TEMPLATE_SYSTEM_ARCHITECTURE.md  TEMPLATE_SYSTEM_EXAMPLES.md  TESTING_INSTRUCTIONS.md  VESPERA_SCRIPTORIUM_BRAND_GUIDE.md  install.ps1  install.py  install.sh  pyproject.toml  requirements.txt  setup.py
mcp-task-orchestrator/.claude/: config.json  settings.json  settings.json.backup
mcp-task-orchestrator/.github/: CODEOWNERS  FUNDING.yml
mcp-task-orchestrator/.research_coordination/: agent_1_findings.md  agent_2_findings.md  agent_3_findings.md  agent_4_findings.md  quality_assessment.md  synthesis_workspace.md
mcp-task-orchestrator/PRPs/: CLAUDE.md  README.md  [IN-PROGRESS]github-issues-fix-meta-prp.md  database-persistence-architecture-audit.md  pyproject.toml
mcp-task-orchestrator/docs/: CLAUDE.legacy.md  CLAUDE.md  PHILOSOPHY.md  README.legacy.md  README.md  creative-writing-features-specification.md  executive-dysfunction-ux-framework.md  vespera-implementation-roadmap.md  vespera-platform-architecture-design.md  vespera-platform-transformation-analysis.md
mcp-task-orchestrator/installer/: __init__.py  clients.py  core.py  environments.py  models.py  sources.py  (+1 more)
(+1213 files in other folders)
